# NPUcore-lwext4

./: .gitignore  Makefile  README.md
dependency/ext4-view-rs/: Cargo.toml
dependency/ext4/lwext4-c/src/: ext4.c
dependency/ext4/lwext4-rs/src/: file.rs
dependency/isomorphic_drivers/src/block/: ahci.rs
dependency/lwext4_rust/: Cargo.toml  build.rs
dependency/lwext4_rust/c/: musl-generic.cmake  ulibc.c  wrapper.h
dependency/lwext4_rust/src/: bindings.rs  blockdev.rs  dir.rs  file.rs  inode.rs  lib.rs  ulibc.rs
os/: Cargo.toml  Makefile  buildfs.sh  initproc  run_script
os/.cargo/: config
os/src/: main.rs  preload_app.S  timer.rs
os/src/arch/: mod.rs
os/src/arch/la64/: config.rs  entry.asm  laflex.rs  mod.rs  sbi.rs  syscall_id.rs  tlb.rs
os/src/arch/la64/board/: 2k1000.rs
os/src/arch/la64/register/: mod.rs
os/src/arch/la64/trap/: mem_access.rs  mod.rs
os/src/drivers/block/: block_dev.rs  mem_blk.rs  mod.rs  sata_blk.rs
os/src/fs/: cache.rs  directory_tree.rs  ext4_file.rs  file_trait.rs  layout.rs  mod.rs  swap.rs
os/src/fs/dev/: hwclock.rs  mod.rs  null.rs  pipe.rs  socket.rs  tty.rs  urandom.rs  zero.rs
os/src/fs/ext4/: mod.rs
os/src/fs/fat32/: inode.rs  mod.rs
os/src/mm/: map_area.rs  memory_set.rs  mod.rs  page_table.rs
os/src/net/: address.rs  config.rs  mod.rs  tcp.rs  udp.rs  unix.rs
os/src/syscall/: errno.rs  fs.rs  mod.rs  net.rs  process.rs  syscall_macro.rs
os/src/task/: mod.rs  task.rs
os/src/utils/: error.rs  mod.rs  random.rs
user/.cargo/: config
user/testcases/final/: hello  libc-bench  lmbench_testcode.sh  testcode.sh
user/testcases/final/ltp/: copy-file-range-test-1  copy-file-range-test-2  copy-file-range-test-3  copy-file-range-test-4
user/testcases/final/lua/: lua_testcode.sh  test.sh
util/qemu-2k1000/: .gitignore
util/qemu-2k1000/gz/: runqemu2k1000
